--- a/src/app/views/base/forms.component.html
+++ b/src/app/views/base/forms.component.html
@@ -1,4 +1,348 @@
-<div class="animated fadeIn">
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="d-inline">Personal Details</h3>
+        <button
+          type="submit"
+          class="btn btn-warning float-right text-weight-bold d-inline"
+        >
+          Edit Profile
+        </button>
+      </div>
+      <div class="card-body">
+        <form action="">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="firstName" class="font-weight-bold"
+                  >First Name</label
+                >
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"
+                      ><i class="fa fa-user"></i
+                    ></span>
+                  </div>
+                  <input
+                    type="text"
+                    id="firstName"
+                    name="name"
+                    class="form-control"
+                    placeholder="First Name"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="lastName" class="font-weight-bold">Last Name</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">
+                      <i class="fa fa-user"></i>
+                    </span>
+                  </div>
+                  <input
+                    type="text"
+                    id="lastName"
+                    name="name"
+                    class="form-control"
+                    placeholder="Last Name"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email" class="font-weight-bold">Email</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="fa fa-envelope"></i
+                ></span>
+              </div>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="form-control"
+                placeholder="Email"
+                autocomplete="email"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="dob" class="font-weight-bold">Date of Birth</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input type="date" id="dob" name="dob" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="gender" class="font-weight-bold">Gender</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Gender"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="age" class="font-weight-bold">Age</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="number"
+                id="age"
+                name="age"
+                class="form-control"
+                disabled="true"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="address" class="font-weight-bold">Address</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Address"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="city" class="font-weight-bold">City</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="City"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="tel" class="font-weight-bold">Telephone</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="tel"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Telephone"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="qual" class="font-weight-bold">Qualification</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Qualification"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="about" class="font-weight-bold">About Me</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Your Intro"
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-header"><h3>Academy Details</h3></div>
+      <div class="card-body">
+        <form action="">
+          <div class="form-group">
+            <label class="font-weight-bold">Rating</label>
+            <div class="input-group">
+              <!-- Ratinng Start -->
+              <!-- Ratinng Start -->
+              <!-- Ratinng Start -->
+              <!-- Ratinng Start -->
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
+              </div>
+              <rating
+                class="ml-3"
+                [(ngModel)]="rate"
+                [max]="max"
+                [readonly]="isReadonly"
+                (onHover)="hoveringOver($event)"
+                (onLeave)="resetStar()"
+                [titles]="['one', 'two', 'three']"
+              ></rating>
+              <!-- <span
+                  class="label"
+                  [ngClass]="{
+                    'label-warning': percent < 30,
+                    'label-info': percent >= 30 && percent < 70,
+                    'label-success': percent >= 70
+                  }"
+                  [ngStyle]="{
+                    display: overStar && !isReadonly ? 'inline' : 'none'
+                  }"
+                  >{{ percent }}%</span
+                >
+                <div class="card">
+                  <pre
+                    class="card-block card-header"
+                  >Rate: <b>{{rate}}</b>;  Readonly is: <i>{{isReadonly}}</i>;  Hovering over: <b>{{overStar || "none"}}</b></pre>
+                </div>
+
+                <button
+                  type="button"
+                  class="btn btn-sm btn-danger"
+                  (click)="rate = 0"
+                  [disabled]="isReadonly"
+                >
+                  Clear
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-sm btn-primary"
+                  (click)="isReadonly = !isReadonly"
+                >
+                  Toggle Readonly
+                </button> -->
+              <!-- Ratinng End -->
+              <!-- Ratinng End -->
+              <!-- Ratinng End -->
+              <!-- Ratinng End -->
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="totalSubjects" class="font-weight-bold"
+              >Total Subjects</label
+            >
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
+              </div>
+              <input type="number" id="asd" name="name" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="delivered" class="font-weight-bold"
+              >Delivered Lectures</label
+            >
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="number"
+                id="lastName"
+                name="name"
+                class="form-control"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="recLec" class="font-weight-bold"
+              >Recorded Lectures</label
+            >
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="fa fa-envelope"></i
+                ></span>
+              </div>
+              <input type="number" id="" name="email" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="liveLec" class="font-weight-bold">Live Lectures</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="fa fa-envelope"></i
+                ></span>
+              </div>
+              <input type="number" id="" name="email" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="Students" class="font-weight-bold"
+              >No of Students</label
+            >
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input type="number" id="dob" name="dob" class="form-control" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- 
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
@@ -14,7 +358,7 @@
                 <input type="text" class="form-control" id="name" placeholder="Enter your name">
               </div>
             </div>
-          </div><!--/.row-->
+          </div>
           <div class="row">
             <div class="col-sm-12">
               <div class="form-group">
@@ -22,7 +366,7 @@
                 <input type="text" class="form-control" id="ccnumber" placeholder="0000 0000 0000 0000">
               </div>
             </div>
-          </div><!--/.row-->
+          </div>
           <div class="row">
             <div class="form-group col-sm-4">
               <label for="ccmonth">Month</label>
@@ -64,10 +408,10 @@
                 <input type="text" class="form-control" id="cvv" placeholder="123">
               </div>
             </div>
-          </div><!--/.row-->
+          </div>
         </div>
       </div>
-    </div><!--/.col-->
+    </div>
     <div class="col-sm-6">
       <div class="card">
         <div class="card-header">
@@ -96,15 +440,15 @@
               <label for="postal-code">Postal Code</label>
               <input type="text" class="form-control" id="postal-code" placeholder="Postal Code">
             </div>
-          </div><!--/.row-->
+          </div>
           <div class="form-group">
             <label for="country">Country</label>
             <input type="text" class="form-control" id="country" placeholder="Country name">
           </div>
         </div>
       </div>
-    </div><!--/.col-->
-  </div><!--/.row-->
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-6">
       <div class="card">
@@ -112,7 +456,7 @@
           <strong>Basic Form</strong> Elements
         </div>
         <div class="card-body">
-          <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
+          <form action="" enctype="multipart/form-data" class="form-horizontal">
             <div class="form-group row">
               <label class="col-md-3 col-form-label">Static</label>
               <div class="col-md-9">
@@ -324,7 +668,7 @@
           <strong>Inline</strong> Form
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-inline">
+          <form action="" class="form-inline">
             <div class="form-group">
               <label class="sr-only" for="if-email">Email</label>
               <input type="email" id="if-email" name="if-email" class="form-control" placeholder="Enter Email.." autocomplete="email">
@@ -347,7 +691,7 @@
           <strong>Horizontal</strong> Form
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <label class="col-md-3 col-form-label" for="hf-email">Email</label>
               <div class="col-md-9">
@@ -374,7 +718,7 @@
           <strong>Normal</strong> Form
         </div>
         <div class="card-body">
-          <form action="" method="post">
+          <form action="">
             <div class="form-group">
               <label for="nf-email">Email</label>
               <input type="email" id="nf-email" name="nf-email" class="form-control" placeholder="Enter Email.." autocomplete="email">
@@ -398,7 +742,7 @@
           <strong>Grid</strong>
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <div class="col-sm-3">
                 <input type="text" class="form-control" placeholder=".col-sm-3">
@@ -462,7 +806,7 @@
           <strong>Sizes</strong>
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <label class="col-sm-5 col-form-label" for="input-small">Small Input</label>
               <div class="col-sm-6">
@@ -488,8 +832,8 @@
           <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
         </div>
       </div>
-    </div><!--/.col-->
-  </div><!--/.row-->
+    </div>
+  </div>
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
@@ -515,7 +859,7 @@
           </div>
         </form>
       </div>
-    </div><!--/.col-->
+    </div>
     <div class="col-sm-6">
       <div class="card">
         <div class="card-header">
@@ -543,7 +887,7 @@
           </form>
         </div>
       </div>
-    </div><!--/.col-->
+    </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
@@ -552,7 +896,7 @@
           <strong>Icon/Text</strong> Groups
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <div class="col-md-12">
                 <div class="input-group">
@@ -600,7 +944,7 @@
           <strong>Buttons</strong> Groups
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <div class="col-md-12">
                 <div class="input-group">
@@ -649,7 +993,7 @@
         </div>
         <div class="card-body">
 
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <div class="col-md-12">
                 <div class="input-group">
@@ -742,7 +1086,7 @@
           </small>
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <div class="col-md-8">
                 <input type="text" class="form-control" placeholder=".col-md-8">
@@ -803,7 +1147,7 @@
           </small>
         </div>
         <div class="card-body">
-          <form action="" method="post" class="form-horizontal">
+          <form action="" class="form-horizontal">
             <div class="form-group row">
               <div class="col-4">
                 <input type="text" class="form-control" placeholder=".col-4">
@@ -863,7 +1207,7 @@
           Example Form
         </div>
         <div class="card-body">
-          <form action="" method="post">
+          <form action="">
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
@@ -910,7 +1254,7 @@
           Example Form <code>append</code>
         </div>
         <div class="card-body">
-          <form action="" method="post">
+          <form action="">
             <div class="form-group">
               <div class="input-group">
                 <input type="text" id="username2" name="username2" class="form-control" placeholder="Username">
@@ -948,7 +1292,7 @@
           Example Form <code>prepend</code>
         </div>
         <div class="card-body">
-          <form action="" method="post">
+          <form action="">
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
@@ -981,7 +1325,6 @@
       </div>
     </div>
   </div>
-  <!--/.row-->
   <div class="row">
     <div class="col-lg-12">
       <div class="card">
@@ -1066,6 +1409,6 @@
         </form>
         </div>
       </div>
-    </div> <!--/.col-->
-  </div><!--/.row-->
-</div>
+    </div> 
+  </div>
+ -->
