--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -6,42 +6,94 @@
           <div class="card mx-4">
             <div class="card-body p-4">
               <form>
-                <h1>Register</h1>
-                <p class="text-muted">Create your account</p>
+                <div class="row">
+                  <div class="col-md-6">
+                    <h1>Register</h1>
+                    <p class="text-muted">Create your account</p>
+                  </div>
+                  <!-- <div class="col-md-6">
+                    <img
+                      src="cinqueterre.jpg"
+                      class="rounded-circle img-fluid"
+                      alt="Cinque Terre"
+                    />
+                  </div> -->
+                </div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="icon-user"></i></span>
+                    <span class="input-group-text"
+                      ><i class="icon-user"></i
+                    ></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Username"
+                    autocomplete="username"
+                    required
+                  />
                 </div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">@</span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Email" autocomplete="email" required>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Email"
+                    autocomplete="email"
+                    required
+                  />
                 </div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="icon-lock"></i></span>
+                    <span class="input-group-text"
+                      ><i class="icon-lock"></i
+                    ></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password" autocomplete="new-password" required>
+                  <input
+                    type="password"
+                    class="form-control"
+                    placeholder="Password"
+                    autocomplete="new-password"
+                    required
+                  />
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="icon-lock"></i></span>
+                    <span class="input-group-text"
+                      ><i class="icon-lock"></i
+                    ></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Repeat password" autocomplete="new-password" required>
+                  <input
+                    type="password"
+                    class="form-control"
+                    placeholder="Repeat password"
+                    autocomplete="new-password"
+                    required
+                  />
                 </div>
-                <button type="button" class="btn btn-block btn-success">Create Account</button>
+                <button type="button" class="btn btn-block btn-success">
+                  Create Account
+                </button>
               </form>
             </div>
             <div class="card-footer p-4">
               <div class="row">
-                <div class="col-6">
-                  <button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>
+                <div class="col-4">
+                  <button class="btn btn-block btn-facebook" type="button">
+                    <span>facebook</span>
+                  </button>
                 </div>
-                <div class="col-6">
-                  <button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>
+                <div class="col-4">
+                  <button class="btn btn-block btn-google-plus" type="button">
+                    <span>Google</span>
+                  </button>
+                </div>
+                <div class="col-4">
+                  <button class="btn btn-block btn-twitter" type="button">
+                    <span>twitter</span>
+                  </button>
                 </div>
               </div>
             </div>
