✔ rating error resolved profile pages updated classroom card added

--- a/src/app/views/base/forms.component.html
+++ b/src/app/views/base/forms.component.html
@@ -231,6 +231,7 @@
                 (onHover)="hoveringOver($event)"
                 (onLeave)="resetStar()"
                 [titles]="['one', 'two', 'three']"
+                name="rate"
               ></rating>
               <!-- <span
                   class="label"
