--- a/src/app/views/base/forms.component.html
+++ b/src/app/views/base/forms.component.html
@@ -890,11 +890,12 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped">
+          <table class="table table-striped table-hover table-responsive-sm">
             <thead>
               <tr>
                 <th>#</th>
                 <th>Title</th>
+                <th>Added On</th>
                 <th>Due Date</th>
                 <th>Submitted On</th>
                 <th>Obtained Marks</th>
@@ -907,6 +908,7 @@
               <tr>
                 <td>1</td>
                 <td>Project Charter</td>
+                <td>2012/01/01</td>
                 <td>2012/01/01</td>
                 <td>2012/01/01</td>
                 <td>8</td>
@@ -966,11 +968,12 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped">
+          <table class="table table-striped table-hover table-responsive-sm">
             <thead>
               <tr>
                 <th>#</th>
                 <th>Title</th>
+                <th>Added On</th>
                 <th>Due Date</th>
                 <th>Total Marks</th>
                 <th class="text-center">Controls</th>
@@ -980,6 +983,7 @@
               <tr>
                 <td>1</td>
                 <td>Project Charter</td>
+                <td>2012/01/01</td>
                 <td>2012/01/01</td>
                 <td>10</td>
                 <td>
@@ -1067,7 +1071,7 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped table-hover">
+          <table class="table table-striped table-hover table-responsive-sm">
             <thead>
               <tr>
                 <th>Student Name</th>
@@ -1104,6 +1108,14 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- ********************************  -->
+
+
+
+
 
 <!-- *****************************************CORE UI FORMS********************************************** -->
 <!-- 
