quizzes.html - bit changes

--- a/src/app/views/base/quizzes/quizzes.component.html
+++ b/src/app/views/base/quizzes/quizzes.component.html
@@ -1,13 +1,13 @@
-<!--********************************* ASSIGNMEN DETAILS PAGE STUDENT ***************************** -->
-<!--********************************* ASSIGNMEN DETAILS PAGE STUDENT ***************************** -->
-<!--********************************* ASSIGNMEN DETAILS PAGE STUDENT ***************************** -->
-<!--********************************* ASSIGNMEN DETAILS PAGE STUDENT ***************************** -->
+<!--********************************* QUIZZES DETAILS PAGE STUDENT ***************************** -->
+<!--********************************* QUIZZES DETAILS PAGE STUDENT ***************************** -->
+<!--********************************* QUIZZES DETAILS PAGE STUDENT ***************************** -->
+<!--********************************* QUIZZES DETAILS PAGE STUDENT ***************************** -->
 
 <div class="row">
   <div class="col-sm-12">
     <div class="card">
       <div class="card-header">
-        <h3 class="d-inline">Assignment Details Page STUDENT</h3>
+        <h3 class="d-inline">Quizzes Details Page STUDENT</h3>
       </div>
     </div>
     <div class="animated fadeIn">
@@ -29,7 +29,8 @@
                 <th>Title</th>
                 <th>Added On</th>
                 <th>Due Date</th>
-                <th>Submitted On</th>
+                <th>Attempted On</th>
+                <th>Time (min)</th>
                 <th>Obtained Marks</th>
                 <th>Total Marks</th>
                 <th>Status</th>
@@ -43,6 +44,7 @@
                 <td>2012/01/01</td>
                 <td>2012/01/01</td>
                 <td>2012/01/01</td>
+                <td>15</td>
                 <td>8</td>
                 <td>10</td>
                 <td><span class="badge badge-success">Submitted</span></td>
@@ -73,10 +75,10 @@
   </div>
 </div>
 
-<!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
-<!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
-<!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
-<!-- ******************************** ADD ASSIGNMENTS PAGE TEACHER *****************************-->
+<!-- ************************************ QUIZZES PAGE TEACHER ************************************-->
+<!-- ************************************ QUIZZES PAGE TEACHER ************************************-->
+<!-- ************************************ QUIZZES PAGE TEACHER ************************************-->
+<!-- ************************************ QUIZZES PAGE TEACHER ************************************-->
 
 <div class="row">
   <div class="col-sm-12">
