Create Quizz page in progress

--- a/src/app/views/base/createquiz/createquiz.component.html
+++ b/src/app/views/base/createquiz/createquiz.component.html
@@ -1,34 +1,174 @@
-<div class="btn-group float-right" dropdown>
+<!-- <div class="btn-group" dropdown>
+  <button type="button" class="btn btn-danger">Islamiyat</button>
   <button
-    id="button-basic"
-    dropdownToggle
+    id="button-split"
     type="button"
-    class="btn btn-primary dropdown-toggle btn-sm"
-    aria-controls="dropdown-basic"
+    dropdownToggle
+    class="btn btn-danger dropdown-toggle dropdown-toggle-split"
+    aria-controls="dropdown-split"
   >
-    Assignment No <span class="caret"></span>
+    <span class="caret"></span> <span class="sr-only">Split button!</span>
   </button>
   <ul
-    id="dropdown-basic"
+    id="dropdown-split"
     *dropdownMenu
     class="dropdown-menu"
     role="menu"
-    aria-labelledby="button-basic"
+    aria-labelledby="button-split"
   >
-    <li role="menuitem">
-      <a class="dropdown-item p-1 pl-2" href="#">Action</a>
-    </li>
-    <li role="menuitem">
-      <a class="dropdown-item p-1 pl-2" href="#">Another action</a>
-    </li>
-    <li role="menuitem">
-      <a class="dropdown-item p-1 pl-2" href="#"
-        >Something else here</a
-      >
-    </li>
+    <li role="menuitem"><a class="dropdown-item" href="">Islamiyat</a></li>
+    <li role="menuitem"><a class="dropdown-item" href="">Maths</a></li>
+    <li role="menuitem"><a class="dropdown-item" href="">Chemistry</a></li>
     <li class="divider dropdown-divider"></li>
-    <li role="menuitem">
-      <a class="dropdown-item p-1 pl-2" href="#">Separated link</a>
-    </li>
+    <li role="menuitem"><a class="dropdown-item" href="">Physics</a></li>
   </ul>
-</div>
+</div> -->
+
+<form>
+  <div class="form-row">
+    <div class="col-md-3">
+      <label class="font-weight-bold">Subject</label>
+      <select class="custom-select">
+        <option selected>Choose Subject</option>
+        <option value="Islamiyat">Islamiyat</option>
+        <option value="Maths">Maths</option>
+        <option value="Chemistry">Chemistry</option>
+        <option value="Physics">Physics</option>
+      </select>
+    </div>
+    <div class="col-md-3">
+      <label class="font-weight-bold">Title</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Quiz Title"
+        required
+      />
+    </div>
+    <div class="col-md-3">
+      <label class="font-weight-bold">Duration</label>
+      <input
+        type="number"
+        class="form-control"
+        placeholder="Quiz Duration (min)"
+        min="5"
+        max="120"
+        required
+      />
+    </div>
+    <div class="col-md-3">
+      <label class="font-weight-bold">Total Marks</label>
+      <input
+        type="number"
+        class="form-control"
+        placeholder="Total Marks"
+        min="5"
+        max="100"
+        required
+      />
+    </div>
+  </div>
+
+  <div class="row mt-4">
+    <div class="col-sm-12">
+      <div class="animated fadeIn">
+        <div class="card">
+          <div class="card-header">
+            <label for="className" class="font-weight-bold"
+              >Subject Name Here</label
+            >
+            <div class="pl-2 pr-2 float-right">
+              <button
+                class="btn p-0"
+                popover="View"
+                triggers="mouseenter:mouseleave"
+              >
+                <span><i class="text-success fa fa-eye"></i> </span>
+              </button>
+              <button
+                class="btn p-0 ml-2"
+                popover="Save"
+                triggers="mouseenter:mouseleave"
+              >
+                <span> <i class="text-primary fa fa-save"></i> </span>
+              </button>
+              <button
+                class="btn p-0 ml-2"
+                popover="Upload"
+                triggers="mouseenter:mouseleave"
+              >
+                <span> <i class="text-warning fa fa-upload"></i> </span>
+              </button>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-12">
+                <!-- <ng-template #question> -->
+
+                <form>
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      class="form-control-plaintext border border-secondary rounded p-1"
+                      placeholder="Type your question here..."
+                    />
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="inlineRadioOptions"
+                      id="inlineRadio1"
+                      value="mcq"
+                    />
+                    <label class="form-check-label" for="inlineRadio1"
+                      >MCQ</label
+                    >
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="inlineRadioOptions"
+                      id="inlineRadio2"
+                      value="tf"
+                    />
+                    <label class="form-check-label" for="inlineRadio2"
+                      >True/False</label
+                    >
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="inlineRadioOptions"
+                      id="inlineRadio3"
+                      value="option3"
+                      disabled
+                    />
+                    <label class="form-check-label" for="inlineRadio3"
+                      >Fill in the blanks</label
+                    >
+                  </div>
+                </form>
+                <!-- </ng-template> -->
+              </div>
+            </div>
+            <div class="row mt-4">
+              <div class="col-sm-12">
+                <button
+                  class="btn btn-secondary btn-lg btn-block"
+                  popover="Add Question"
+                  triggers="mouseenter:mouseleave"
+                >
+                  <span><i class="text-dark fa fa-plus"></i> </span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
