--- a/src/app/views/base/createquiz/createquiz.component.html
+++ b/src/app/views/base/createquiz/createquiz.component.html
@@ -29,7 +29,7 @@
     <div class="col-md-3">
       <label class="font-weight-bold">Subject</label>
       <select class="custom-select">
-        <option selected>Choose Subject</option>
+        <option selected disabled="true">Choose Subject</option>
         <option value="Islamiyat">Islamiyat</option>
         <option value="Maths">Maths</option>
         <option value="Chemistry">Chemistry</option>
