--- a/src/app/views/base/createquiz/createquiz.component.html
+++ b/src/app/views/base/createquiz/createquiz.component.html
@@ -92,20 +92,33 @@
             </div>
           </div>
           <div class="card-body" formArrayName="questions">
-            <ol
-              class="p-0"
-              *ngFor="let question of questions.controls; let i = index"
-              [formGroupName]="i"
-            >
-              <li>
+            <ol class="p-0">
+              <li
+                class="mb-4"
+                *ngFor="
+                  let question of getQuestions(quizForm);
+                  let questionNumber = index
+                "
+                [formGroupName]="questionNumber"
+              >
                 <div>
-                  <div class="form-group mb-1">
-                    <input
+                  <div class="form-group mb-1 input-group">
+                    <inputg
                       type="text"
                       class="form-control-plaintext border border-secondary rounded p-1"
                       placeholder="Type your question here..."
                       formControlName="text"
                     />
+                    <div class="input-group-append">
+                      <button
+                        class="btn border border-danger rounded"
+                        popover="Delete Question"
+                        triggers="mouseenter:mouseleave"
+                        (click)="deleteQuestion(questionNumber)"
+                      >
+                        <span><i class="text-danger fa fa-trash"></i> </span>
+                      </button>
+                    </div>
                   </div>
                   <div class="form-check form-check-inline">
                     <input
@@ -125,49 +138,82 @@
                     />
                     <label class="form-check-label">True/False</label>
                   </div>
-                  {{ question.value | json }}
                   <div
                     *ngIf="question.value.type == 'mcq'"
                     formArrayName="mcqOptions"
                   >
-                    <ul
-                      *ngFor="
-                        let mcqOption of question.controls.mcqOptions.controls;
-                        let j = index
-                      "
-                      [formGroupName]="j"
-                    >
-                      <li class="list-inline">
-                        <div class="form-check form-check-inline">
-                          <button class="btn btn-outline-dark">
+                    <ol class="list-inline mt-2">
+                      <li
+                        class="list-inline-item ml-4 mt-2"
+                        *ngFor="
+                          let mcqOption of getMcqOptions(question);
+                          let optionNumber = index
+                        "
+                        [formGroupName]="optionNumber"
+                      >
+                        <!-- {{ question.value | json }} -->
+                        <div class="input-group">
+                          <!-- formControlName="mcqCorrectOption" -->
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            value="mcqCorrectOption"
+                          />
+                          <!-- [formControlName]="mcqCorrectOption" -->
+                          <input
+                            class="form-control-plaintext input-sm border border-secondary rounded p-0 pl-1"
+                            type="text"
+                            value="{{ mcqOption.value.option }}"
+                          />
+                          <button
+                            class="btn btn-sm border border-danger rounded py-0"
+                            popover="Delete Option"
+                            triggers="mouseenter:mouseleave"
+                            (click)="deleteOption(questionNumber, optionNumber)"
+                          >
                             <span
-                              contenteditable="true"
-                              formControlName="option"
-                            >
+                              ><i class="text-danger fa fa-trash"></i>
                             </span>
                           </button>
-                          <!-- <input
-                            class="form-check-input"
-                            type="checkbox"
-                            formControlName="option"
-                            value="mcqOption.value.option"
-                          />
-                          <label
-                            class="form-check-label"
-                            contenteditable="true"
-                            >{{ mcqOption.value.option }}</label
-                          > -->
                         </div>
                       </li>
-                    </ul>
-
-                    <button
-                      class="btn ml-1 btn-sm btn-secondary"
-                      popover="Add Option"
-                      triggers="mouseenter:mouseleave"
-                    >
-                      <span><i class="text-dark fa fa-plus"></i></span>
-                    </button>
+                      <div class="d-inline">
+                        <button
+                          class="btn btn-sm btn-secondary border border-secondary py-0 mb-1 ml-4"
+                          popover="Add Option"
+                          triggers="mouseenter:mouseleave"
+                          (click)="addMcqOption(questionNumber)"
+                        >
+                          <span><i class="text-dark fa fa-plus"></i></span>
+                        </button>
+                      </div>
+                    </ol>
+                  </div>
+                  <div *ngIf="question.value.type == 'tf'">
+                    <ol class="list-inline mt-2">
+                      <li class="list-inline-item ml-4 mt-2">
+                        <div class="input-group">
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            value="true"
+                            formControlName="tfCorrectOption"
+                          />
+                          <label class="form-check-label">True</label>
+                        </div>
+                      </li>
+                      <li class="list-inline-item ml-4 mt-2">
+                        <div class="input-group">
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            value="false"
+                            formControlName="tfCorrectOption"
+                          />
+                          <label class="form-check-label">False</label>
+                        </div>
+                      </li>
+                    </ol>
                   </div>
                 </div>
               </li>
@@ -178,6 +224,7 @@
                   class="btn btn-secondary btn-lg btn-block pt-0 pb-0"
                   popover="Add Question"
                   triggers="mouseenter:mouseleave"
+                  (click)="addQuestion()"
                 >
                   <span><i class="text-dark fa fa-plus"></i> </span>
                 </button>
