✔ Signup Pages Added

--- a/src/app/views/base/cards.component.html
+++ b/src/app/views/base/cards.component.html
@@ -10,7 +10,7 @@
         <div class="card-header h4 ">
           9th Class
           <button
-            class="btn btn-outline-danger  float-right ml-2"
+            class="btn btn-sm btn-outline-danger  float-right ml-2"
             popover="Delete"
             triggers="mouseenter:mouseleave"
           >
@@ -48,7 +48,7 @@
         <div class="card-header h4 ">
           Maths
           <button
-            class="btn btn-outline-danger  float-right ml-2"
+            class="btn btn-sm btn-outline-danger  float-right ml-2"
             popover="Delete"
             triggers="mouseenter:mouseleave"
           >
@@ -85,7 +85,7 @@
         <div class="card-header h4 ">
           Safi
           <button
-            class="btn btn-outline-danger  float-right ml-2"
+            class="btn btn-sm btn-outline-danger  float-right ml-2"
             popover="Delete"
             triggers="mouseenter:mouseleave"
           >
@@ -140,7 +140,7 @@
         <div class="card-header h4 ">
           Teacher Name
           <button
-            class="btn btn-outline-info  float-right ml-2"
+            class="btn btn-sm btn-outline-info float-right ml-2"
             popover="View Profile"
             triggers="mouseenter:mouseleave"
           >
@@ -165,10 +165,10 @@
                 <strong>English</strong>
               </li>
             </ul>
-            <div class="row">
+            <div class="row mt-3">
               <div class="col-6">
                 <button
-                  class="btn btn-primary mt-2 ml-4"
+                  class="btn btn-sm btn-success form-control"
                   popover="Accept"
                   triggers="mouseenter:mouseleave"
                 >
@@ -177,7 +177,7 @@
               </div>
               <div class="col-6">
                 <button
-                  class="btn btn-danger mt-2 ml-4"
+                  class="btn btn-sm btn-danger form-control"
                   popover="Reject"
                   triggers="mouseenter:mouseleave"
                 >
@@ -204,7 +204,7 @@
         <div class="card-header h4 ">
           Student Name
           <button
-            class="btn btn-outline-info  float-right ml-2"
+            class="btn btn-sm btn-outline-info  float-right ml-2"
             popover="View Profile"
             triggers="mouseenter:mouseleave"
           >
@@ -222,7 +222,7 @@
             <div class="row">
               <div class="col-6">
                 <button
-                  class="btn btn-primary mt-2 ml-4"
+                  class="btn btn-sm btn-primary form-control mt-2 ml-4"
                   popover="Accept"
                   triggers="mouseenter:mouseleave"
                 >
@@ -231,7 +231,7 @@
               </div>
               <div class="col-6">
                 <button
-                  class="btn btn-danger mt-2 ml-4"
+                  class="btn btn-sm btn-danger mt-2 ml-4"
                   popover="Reject"
                   triggers="mouseenter:mouseleave"
                 >
@@ -258,7 +258,7 @@
         <div class="card-header h4 ">
           Academy Name
           <button
-            class="btn btn-outline-info  float-right ml-2"
+            class="btn btn-sm btn-outline-info  float-right ml-2"
             popover="View Profile"
             triggers="mouseenter:mouseleave"
           >
@@ -299,7 +299,7 @@
         <div class="card-header h4 ">
           Classroom
           <button
-            class="btn btn-warning  float-right ml-2"
+            class="btn btn-sm btn-warning  float-right ml-2"
             popover="Announcement"
             triggers="mouseenter:mouseleave"
           >
@@ -336,7 +336,7 @@
         <div class="card-header h4 ">
           Academy Name
           <button
-            class="btn btn-outline-info  float-right ml-2"
+            class="btn btn-sm btn-outline-info  float-right ml-2"
             popover="View Profile"
             triggers="mouseenter:mouseleave"
           >
